<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0FFFFFFF"
    tools:context=".AddActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/AccountTypeTEXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accounttype"
                android:textSize="18sp" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/AccountGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/PartyAccountRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/party" />

            <RadioButton
                android:id="@+id/FinancialRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/finacial" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/TypeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/type"
                android:textSize="18sp" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/TypeGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/PaymentRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment" />

            <RadioButton
                android:id="@+id/RefundRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/refund" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/AddButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/AmountText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/amount"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TaxText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Tax"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/NameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="18dp"
                android:text="@string/name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/toWhoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="To Who"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/DateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="18dp"
                android:text="@string/date"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/StatusDateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:text="@string/status_date"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/MethodText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="18dp"
                android:text="@string/method"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/AmountEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="500"
                android:ems="10"
                android:hint="@string/_500"
                android:inputType="number"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/TaxEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="20"
                android:ems="10"
                android:hint="@string/_500"
                android:inputType="number"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/giorno_giovanna"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/toWhoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dio_brando"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/DateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/_2000_00_00"
                android:inputType="date" />

            <EditText
                android:id="@+id/StatusDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/_2000_00_00"
                android:inputType="date" />

            <RadioGroup
                android:id="@+id/MethodGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/CreditCardRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Credit Card" />

                <RadioButton
                    android:id="@+id/PaypalRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Paypal" />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/AddButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="sendData"
        android:text="@string/add"
        app:backgroundTint="#680D0D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>